# excel-compare

./: README.md  pyproject.toml
src/: compare.py  main.py
src/data/import/: daily livanova report.xlsx
src/data/local/: my report.xlsx
