[tool.poetry]
name = "excel compare"
version = "1.0.0"
description = "Compare a new excel sheet with a base file, import newly added data to the base file, and highlight the changes."
authors = ["Mitraj Parmar <mitrajparmar93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
